task Chrome extension

--- a/ui/src/manifest.json
+++ b/ui/src/manifest.json
@@ -5,12 +5,12 @@
   "permissions": ["tabs", "activeTab", "clipboardWrite"],
   "content_scripts": [],
   "background": {
-    "page": "index.html#/backend",
+    "page": "index.html",
     "persistent": true
   },
   "browser_action": {
     "default_title": "Key Ring",
-    "default_popup": "index.html#/keys"
+    "default_popup": "index.html"
   },
   "content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'"
 }
